<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkRed"
    tools:context=".StationDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="385dp"
        android:layout_height="600dp"
        android:layout_marginTop="16dp"
        android:background="@color/darkBlue"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/st_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:text="@string/st_name"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:text="Remaining Fuel Storage"
            android:textColor="@color/lightBlue"
            android:textSize="18dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:text="Petrol 92"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_petrol_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h_petrol_remain"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_petrol_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h_petrol_capacity"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L"
                android:textSize="17dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/h_update_petrol92_vol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UPDATE" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:text="Petrol 95"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_petrol95_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L / "
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_petrol95_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h_petrol95_capacity"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L"
                android:textSize="17dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/h_update_petrol95_vol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UPDATE" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:text="Disel        "
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_diesel_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L / "
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_diesel_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6000"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L"
                android:textSize="17dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/h_update_diesel_vol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UPDATE" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="SuperDiesel    "
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_superdiesel_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L / "
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_superdiesel_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6000"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L"
                android:textSize="17dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/h_update_superdiesel_vol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UPDATE" />

        </TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="Fuel Arrival Time"
            android:textColor="@color/lightBlue"
            android:textSize="18dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="Petrol"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_petrol_arrive_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="20/10/2022 11:50 AM"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <Button
            android:id="@+id/h_btn_nextarrival_patrol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Next ArrivalPetrol 92" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="Petrol95"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_pertrol95_arrive_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="20/10/2022 11:50 AM"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <Button
            android:id="@+id/h_btn_nextarrival_petrol95"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Next Arrival Petrol 95" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="Disel  "
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_diesel_arrive_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="20/10/2022 11:50 AM"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <Button
            android:id="@+id/h_btn_nextarrival_diesel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Next Arrival Diesel" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="Super Diesel"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_superdiesel_arrive_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="20/10/2022 11:50 AM"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <Button
            android:id="@+id/h_btn_nextarrival_superdiesel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Next Arrival Super Diesel" />

    </LinearLayout>

    <Button
        android:id="@+id/h_updateStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="update status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="203dp"
        android:layout_height="54dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-black"
        android:text="OPEN"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/h_updateStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.428" />

</androidx.constraintlayout.widget.ConstraintLayout>